# iot-firmware-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  property.json
.github/workflows/: cmake-single-platform.yml
cmake/: dependencies.cmake
config/: core_http_config.h  core_mqtt_config.h  template_device_config.h
examples/: bytebeam_stream_publish.c  stream_publish.c
include/bytebeam/: custom_types.h  mqtt_client.h  mqtt_client_port.h  stream.h
include/connectivity/: http_client.h  mqtt_client.h  mqtts_client.h
include/data/: internet_object.h
include/interface/: clock.h  filesystem.h  os.h  transport.h
include/iot/: custom_types.h  mqtt_client.h  stream.h
platform/Win32/: platform_win32_port.c  platform_win32_port_clock.c  platform_win32_port_transport.c
portable/: clock.h  transport.h
scripts/: json_to_c_header.py
src/: mqtt_client.c  mqtt_client_port.c  stream.c
src/connectivity/: http_client.c  mqtt_client.c  mqtt_client_port.c  mqtts_client.c
src/data/: internet_object.c
tests/unit/: CMakeLists.txt  IotClockTest.cpp  IotFilesystemTest.cpp  IotOsTest.cpp  IotTransportTest.cpp
